--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@unpic/svelte": "^0.0.25",
 		"clsx": "^1.2.1",
+		"embla-carousel-svelte": "8.0.0-rc07",
 		"isomorphic-dompurify": "^1.6.0",
 		"svelte-markdown": "^0.2.3",
 		"unplugin-icons": "^0.16.3"
