--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^3.59.2",
 		"svelte-check": "^3.4.4",
+		"svelte-intersection-observer": "^0.10.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.6.0",
 		"typescript": "^5.1.3",
@@ -34,6 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@unpic/placeholder": "^0.1.2",
 		"@unpic/svelte": "^0.0.25",
 		"clsx": "^1.2.1",
 		"embla-carousel-svelte": "8.0.0-rc07",
