--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
 		"prepare": "svelte-kit sync"
 	},
 	"devDependencies": {
-		"@iconify/json": "^2.2.92",
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/adapter-static": "^2.0.2",
-		"@sveltejs/kit": "^1.22.3",
-		"@typescript-eslint/eslint-plugin": "^6.1.0",
-		"@typescript-eslint/parser": "^6.1.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.45.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte": "^2.32.2",
-		"postcss": "^8.4.26",
-		"prettier": "^3.0.0",
-		"prettier-plugin-svelte": "^3.0.0",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.6",
-		"svelte-intersection-observer": "^0.10.0",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.6.0",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.4"
+		"@iconify/json": "^2.2.153",
+		"@sveltejs/adapter-auto": "^2.1.1",
+		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/kit": "^1.27.7",
+		"@typescript-eslint/eslint-plugin": "^6.13.2",
+		"@typescript-eslint/parser": "^6.13.2",
+		"autoprefixer": "^10.4.16",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.35.1",
+		"postcss": "^8.4.32",
+		"prettier": "^3.1.0",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.2",
+		"svelte-intersection-observer": "^0.10.1",
+		"tailwindcss": "^3.3.6",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.3",
+		"vite": "^4.5.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@unpic/placeholder": "^0.1.2",
-		"@unpic/svelte": "^0.0.28",
+		"@unpic/svelte": "^0.0.42",
 		"clsx": "^2.0.0",
-		"embla-carousel-svelte": "8.0.0-rc11",
-		"isomorphic-dompurify": "^1.8.0",
-		"svelte-markdown": "^0.2.3",
-		"unplugin-icons": "^0.16.5"
+		"embla-carousel-svelte": "8.0.0-rc15",
+		"isomorphic-dompurify": "^1.11.0",
+		"object-hash": "^3.0.0",
+		"svelte-markdown": "^0.4.0",
+		"unplugin-icons": "^0.18.1"
 	}
 }
